# klipper-sgp40

./: CONTRIBUTING.md  README.md  install.sh  patch-mainsail.sh  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
file_templates/: moonraker.conf
scripts/: install.sh  patch-mainsail.sh
src/: sgp40.py
src/klipper-nevermore/: sgp40.py
src/klipper_sgp40/: __init__.py  gia.py  sgp40.py  voc_algorithm.py
src/sgp40/: __init__.py
