[project]
name = "sgp40"
dynamic = ["dependencies", "version"]
requires-python = ">=3.6"
authors = [
    { name = "Stefan Dej", email = "meteyou@gmail.com" },
    { name = "Adrien Le Masle" },
    { name = "Chad Condon" },
]
description = "Native Klipper support for SGP40 sensor"
readme = "README.md"

[dependency-groups]
dev = ["ruff ~= 0.7"]

[build-system]
requires = ["setuptools >= 64", "setuptools-scm >= 8"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]
ignore = ["E501"]
unfixable = ["B"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools_scm]
