[project]
name = "klipper-sgp40"
dynamic = ["version"]
requires-python = ">=3.7"
authors = [
    { name = "Stefan Dej", email = "meteyou@gmail.com" },
    { name = "Adrien Le Masle" },
    { name = "Chad Condon" },
]
description = "Native Klipper support for SGP40 sensor"
readme = "README.md"

[dependency-groups]
dev = ["ruff ~= 0.7"]

[build-system]
requires = ["setuptools >= 64", "setuptools-scm >= 8"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
extend-select = ["B", "I", "N"]

[tool.setuptools_scm]
